--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,3 +1,42 @@
 body {
-    background:skyblue;
+    background:#F2E0C9;
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+.assignments {
+    display:flex;
+    flex-wrap:wrap;
+}
+
+.assignment {
+    width:21%;
+    padding:10px;
+    margin:10px;
+    margin-bottom: 30px;
+    background:#BF8339;
+    border-radius:5px;
+    box-shadow: 5px 8px #401201;
+}
+
+.assignment img {
+    width:200px;
+    border: 2px solid #8C4D3F;
+    margin-right:20px;
+    border-radius:5px;
+    display:block;
+    margin:auto;
+}
+
+h1 {
+    color: #401201;
+    text-align:center;
+}
+
+a {
+    text-decoration:none;
+    color:#fff;
+}
+
+.assignment a:hover {
+    color:#401201;
 }
