--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,5 +1,5 @@
 body {
-    background:#F2E0C9;
+    background:#fff;
     font-family:Arial, Helvetica, sans-serif;
 }
 
@@ -10,26 +10,35 @@ body {
 
 .assignment {
     width:21%;
-    padding:10px;
+    padding:10px 40px;
     margin:10px;
     margin-bottom: 30px;
-    background:#BF8339;
+    background:#67D0EB;
     border-radius:5px;
-    box-shadow: 5px 8px #401201;
+    box-shadow: 5px 8px #FFE5B5;
 }
 
 .assignment img {
-    width:200px;
-    border: 2px solid #8C4D3F;
-    margin-right:20px;
+    width:90%;
+    margin:auto;
     border-radius:5px;
     display:block;
-    margin:auto;
+    margin:20px auto;
 }
 
 h1 {
-    color: #401201;
+    color:orange;
     text-align:center;
+    font-size:48px;
+}
+
+h2 {
+    color:white;
+    font-size:32px;
+}
+
+p {
+    color:white;
 }
 
 a {
@@ -38,5 +47,5 @@ a {
 }
 
 .assignment a:hover {
-    color:#401201;
+   color:black;
 }
